--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ background-color:green;
 }
 html{
     background-color:black;
+    font-size: 2em !important;
+    
 }
 .tajweednisataqwa{
     background-color:brown;
