--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 .scheduale{
-    max-width:1500px;
+    max-width:2000px;
     margin:0 auto;
    
     display:inline-block;
@@ -28,7 +28,7 @@ tr{
 th{
     
     border-width:2px;
-    width:214px;
+    width:200px;
     height:38px;
     border: 4px solid #ddd;
 }
@@ -53,7 +53,7 @@ background-color:green;
 }
 html{
     background-color:black;
-    font-size: 2em !important;
+    font-size: 40px;
     
 }
 .tajweednisataqwa{
